--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ Netdata/Backups/
 Netdata/railnet2.1b/
 Netdata/railnet2.0b/
 Netdata/parameters/
+
 Netdata/*.xnq
 Netdata/*.dat
 Netdata/*.LMF
@@ -43,6 +44,8 @@ Netdata/*.PRM
 Netdata/*.lvl
 Netdata/*.exc
 Netdata/*.exe
+Netdata/*.RPT
+Netdata/*.XCQ
 
 
 
