--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ web/*.csv
 Netdata/Backups/
 Netdata/railnet2.1b/
 Netdata/railnet2.0b/
+Netdata/railnet2.0c/
 Netdata/parameters/
 
 Netdata/*.xnq
